# podcast_episodes

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_17_1144-605126884983_created_podcast_episode_table.py
app/: main.py
app/api/: episode.py  rss.py
app/config/: __init__.py  config.py  db_helper.py
app/crud/: podcast_episode.py
app/models/: __init__.py  base.py  podcast_episode.py
app/schemas/: podcast_episode.py
app/services/: llm.py
app/tg/: bot.py  tg_nofify.py
