[project]
name = "podcast-api"
version = "0.1.0"
description = "Podcast FastAPI project"
authors = [
    {name = "Maksym Chesherov",email = "chesherow22d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
pydantic = {extras = ["email"], version = ">=2.11.2,<3.0.0"}
black = ">=25.1.0,<26.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
asyncio = ">=3.4.3,<4.0.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.15.2,<2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
